# mwe_mkl

./: CMakeLists.txt  README.md  main.cpp  mkl_adapter.hpp  run.sh
